--- a/mainapp/templates/mainapp/contact.html
+++ b/mainapp/templates/mainapp/contact.html
@@ -1,74 +1,9 @@
-{% extends 'mainapp/base.html' %}
-{% load static %}
-
-
 {% block menu %}
 <div class="hero">
     <div class="header clearfix">
-        <a href="/" class="logo"></a>
-        <ul class="menu">
-            <li><a href="/">домой</a></li>
-            <li><a href="/products/">продукты</a></li>
-            <li><a href="/contact/" class="active">контакты</a></li>
-        </ul>
-        <a href="#" class="search"></a>
-        <a href="#" class="basket"></a>
+        {% include 'mainapp/includes/inc_menu.html' %}
     </div>
     <h1>наши контакты</h1>
+    <p>сегодня: {{ visit_date|date:"l, j F, Y" }}</p>
 </div>
-{% endblock %}
-
-{% block content %}
-<div class="location">
-    <div class="location-1">
-        <i class="fa fa-map-marker fa-5x"></i>
-        <h4>Москва</h4>
-        <div class="contacts">
-            <h5>Телефон</h5>
-            <p>+7-888-888-8888</p>
-        </div>
-        <div class="contacts">
-            <h5>Email</h5>
-            <p>info@geekshop.ru</p>
-        </div>
-        <div class="contacts">
-            <h5>Адрес</h5>
-            <p>В пределах МКАД</p>
-        </div>
-    </div>
-    <div class="location-1">
-        <i class="fa fa-map-marker fa-5x"></i>
-        <h4>Москва</h4>
-        <div class="contacts">
-            <h5>Телефон</h5>
-            <p>+7-888-888-8888</p>
-        </div>
-        <div class="contacts">
-            <h5>Email</h5>
-            <p>info@geekshop.ru</p>
-        </div>
-        <div class="contacts">
-            <h5>Адрес</h5>
-            <p>В пределах МКАД</p>
-        </div>
-    </div>
-    <div class="location-1">
-        <i class="fa fa-map-marker fa-5x"></i>
-        <h4>Москва</h4>
-        <div class="contacts">
-            <h5>Телефон</h5>
-            <p>+7-888-888-8888</p>
-        </div>
-        <div class="contacts">
-            <h5>Email</h5>
-            <p>info@geekshop.ru</p>
-        </div>
-        <div class="contacts">
-            <h5>Адрес</h5>
-            <p>В пределах МКАД</p>
-        </div>
-    </div>
-</div>
-
-<div class="clr"></div>
 {% endblock %}
