--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -1,3 +1,25 @@
+{% extends 'mainapp/base.html' %}
+{% load static %}
+
+
+{% block menu %}
+<div class="slider">
+    <div class="header clearfix">
+        {% include 'mainapp/includes/inc_menu.html' %}
+    </div>
+    <div class="text-slider">
+        <h3 class="green">тенденции</h3>
+        <h3 class="big"> удобные стулья</h3>
+        <p>Новый уровень комфорта. Отличные характеристики.</p>
+        <a href="#" class="button-order">заказать <img src="{% static 'img/arrow.png' %}" alt=""></a>
+    </div>
+    <div class="navi">
+        <a href="#"></a><a href="#"></a><a href="#"></a>
+    </div>
+</div>
+{% endblock %}
+
+
 {% block content %}
 <div class="featured">
     <div class="featured-menu">
