--- a/mainapp/templates/mainapp/includes/inc_categories_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_categories_menu.html
@@ -1,9 +1,7 @@
-CSS-класса
-
 <ul class="links-menu">
     {% for link in links_menu %}
     <li>
-        <a href="{% url link.href %}" class="{% if request.resolver_match.url_name == link.href %}active{% endif %}">
+        <a href="{% url 'products:category' link.pk %}">
             {{ link.name }}
         </a>
     </li>
