--- a/adminapp/templates/adminapp/user_update.html
+++ b/adminapp/templates/adminapp/user_update.html
@@ -1,19 +1,14 @@
-{% extends 'adminapp/base.html' %}
+{% extends 'authnapp/base.html' %}
 {% load static %}
 
 
 {% block content %}
-<div class="user_delete">
-    Уверены, что хотите удалить {{ user_to_delete.username }} {% if user_to_delete.first_name %}
-    ({{ user_to_delete.first_name|title }}</b>
-    {% if user_to_delete.last_name %}
-    {{ user_to_delete.last_name|title }}
-    {% endif %})
-    {% endif %}?
-    <form action="{% url 'admin:user_delete' user_to_delete.pk %}" method="post">
-        {% csrf_token %}
-        <input class="btn btn-danger" type="submit" value="удалить">
-    </form>
-    <a href="{% url 'admin:users' %}" class="btn btn-success btn-block" role="button">отмена</a>
-</div>
+<form class="form-horizontal" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ update_form.as_p }}
+    <input class="form-control" type="submit" value="сохранить">
+</form>
+<a href="{% url 'admin:users' %}" class="btn btn-outline-secondary btn-block my-3" role="button">
+    к списку пользователей
+</a>
 {% endblock content %}
