--- a/authnapp/templates/authnapp/login.html
+++ b/authnapp/templates/authnapp/login.html
@@ -18,5 +18,7 @@
 <a href="{% url 'social:begin' 'github' %}?next=/" class="btn btn-outline-secondary btn-block" role="button">
     Вход через <i class="fa fa-github" aria-hidden="true"></i>
 </a>
-
+<li class="google">
+    <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a>
+</li>
 {% endblock content %}
